# bevybevy

./: Cargo.toml
.cargo/: config.toml
triple-a/: Cargo.toml
triple-a/assets/shaders/: fireball.wgsl  fireball2.wgsl
triple-a/assets/shaders/particle/: main.wgsl  types.wgsl
triple-a/src/: assets.rs  lib.rs  main.rs
triple-a/src/components/: health.rs  mod.rs  movement.rs  sprite_animate.rs
triple-a/src/debug/: mod.rs  mouse_world.rs
triple-a/src/events/: health_changed.rs  mod.rs
triple-a/src/particle/: gol_learn.rs  mod.rs  particle_data.rs  particle_draw.rs
triple-a/src/player/: collision.rs  input.rs  mod.rs
triple-a/src/spell/: fireball.rs  mod.rs
triple-a/src/ui/: health.rs  mod.rs
triple-a/src/world_map/: camera.rs  map.rs  mod.rs
