
[workspace]
members = ["triple-a"]
resolver = "2"

[workspace.dependencies]
bevy = "0.15.2"
# asset loader less boilerplate
bevy_asset_loader = "0.22.0"
# asprite img animate
bevy_trickfilm = "0.9.0"
bevy_kira_audio = "0.22.0"
# tilemap
bevy_ecs_ldtk = "0.11.0"
# physical
avian2d = "0.2.1"
rand = "0.9.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# https://github.com/rust-lang/cargo/issues/4897
[profile.wasm]
inherits = "release"
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1
